--- a/directory_components/static/directory_components/export_elements/stylesheets/elements-components.css
+++ b/directory_components/static/directory_components/export_elements/stylesheets/elements-components.css
@@ -271,7 +271,7 @@
 
 @media (max-width: 640px) {
   .great-footer-links {
-    display: unset; }
+    display: block; }
     .great-footer-links a {
       color: #ffffff;
       text-decoration: none; }
@@ -281,8 +281,6 @@
     .great-footer-links ul li,
     .great-footer-links ul > div {
       display: block; }
-    .great-footer-links .great-footer-site-links {
-      padding: 0 30px; }
     .great-footer-links .great-footer-site-links li:first-child a,
     .great-footer-links .great-footer-domestic-international-link li a {
       font-size: 18px; }
@@ -291,7 +289,6 @@
     .great-footer-links .great-footer-domestic-international-link {
       margin-top: 15px;
       text-align: left;
-      padding: 0 30px;
       width: 100%; }
   .great-global-header-footer .great-footer-copyright {
     line-height: 50px;
